--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <div id="container">
 
-        <a href="https://en.wikipedia.org/wiki/Red">
+        <span>
             NFTMR
-        </a>
+        </span>
         <div id="image_upload">
             <input type="file" id="file-selector" hidden>
 
@@ -33,7 +33,7 @@
     </div>
 
     <script src="https://unpkg.com/jimp@0.14.0/browser/lib/jimp.js"></script>
-    <script src="imageManipulation.js"></script>
+    <script src="./imageManipulation.js"></script>
 </body>
 
 </html>
