--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <html lang="en">
 
 <head>
-    <title>Read an image file</title>
-    <link rel="shortcut icon"
-        href="https://cdn.glitch.com/9b775a52-d700-4208-84e9-18578ee75266%2Ficon.jpeg?v=1585082912878">
+    <title>NFTMR</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
